Fix layout bugs in Safari

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -46,6 +46,7 @@ a:hover {
   border-radius: 0;
   border: 0;
   margin: 15px 0;
+  flex: 0 0 auto;
 }
 
 .card-header {
